// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NEW and EDIT <ISO8601DateTimePicker /> should handle any date and time 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    format="yyyy-MM-dd HH:mm:ss OOOO"
    onClick={[Function]}
    onKeyDown={[Function]}
    readOnly={false}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink={false}
    >
      Date-Time Snapshot Test
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        required={false}
        type="text"
        value="2021-07-22 09:00:00 GMT-04:00"
      />
    </div>
  </div>
</div>
`;

exports[`SHOW <ISO8601DateTimePicker /> should handle any date and time 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    format="yyyy-MM-dd HH:mm:ss OOOO"
    onClick={[Function]}
    onKeyDown={[Function]}
    readOnly={true}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink={true}
    >
      Date-Time Snapshot Test
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        required={false}
        type="text"
        value="2021-07-22 09:00:00 GMT-04:00"
      />
    </div>
  </div>
</div>
`;
